Fix: aside text is to cramped

--- a/public/css/aside.css
+++ b/public/css/aside.css
@@ -4,6 +4,7 @@
   padding-left: 1em;
   padding-bottom: 1em;
   font-size: 0.9em;
+  line-height: 1.4;
   color: #a8a8a8;
 }
 
